# indie-tracker

./: Dockerfile  README.rst  docker-compose.prod.yml  docker-compose.yml
client/: package-lock.json  package.json  rollup.config.js
client/src/: App.svelte  api.js  db.js  routes.js  stores.js
client/src/common/: DeleteConfirmationDialog.svelte  Header.svelte  IssueForm.svelte  RstViewer.svelte
client/src/pages/issue_edit/: index.svelte
client/src/pages/issue_list/: index.svelte
client/src/pages/issue_view/: Comment.svelte  CommentForm.svelte  IssueView.svelte  index.svelte
client/src/pages/not_found/: index.svelte
client/src/pages/wiki/: BreadCrumb.svelte  WikiPageForm.svelte  index.svelte  makeBreadCrumbs.js
client/tests/: test_makeBreadCrumbs.js
server/: .gitignore  README.rst  setup.cfg  tox.ini
server/_static/: bundle.css  bundle.css.map  bundle.js  bundle.js.map  global.css  index.html
server/indie_tracker/: cli.py  handlerlibs.py  handlers.py  middlewares.py  routes.py  schemas.py  server.py  settings.py  ws_handlers.py
server/indie_tracker/converter/: __init__.py  converter.py  mermaid.py  rst2html.py
server/indie_tracker/repositories/: __init__.py  base_git_repository.py  file_repository.py  issue_repository.py  project_repository.py  wiki_repository.py
server/tests/: conftest.py  test_handlers.py
server/tests/converter/: test_rst2html.py
