[metadata]
name = indie-tracker
version = attr:indie_tracker.__version__
author = ykrods
author_email =
description = Project management system for prototying or personal project
# long_description = file:README.rst
license = MIT

[options]
install_requires =
  aiohttp
  docutils
  dulwich
  marshmallow
  marshmallow-dataclass
  Pygments
  pytz
  ruamel.yaml
packages = find:

[options.entry_points]
console_scripts =
  indie-tracker=indie_tracker.cli:main

[options.packages.find]
exclude =
  tests